October 15, 2021 pitbox46
-Fixed bug with timer
-Fixed bug with timer between events
-Updated localization

October 14, 2021 pitbox46
-Added model/texture to interface
-Added runCommand as metaData argument. Put in command as a string.
-Date.prototype.getTime() converted to Date.now() in examples

October 13, 2021 pitbox46
-Added event JS event randomizer option

October 12, 2021 pitbox46
-Fixed bug where biomes wouldn't turn into proper strings
-Timer now works based off of end time rather than relative time.
-Updated localization
-Random craft/smelt now tells users the ingredient so the users have to guess the recipe

October 11, 2021 pitbox46
-timeUp works again
-Fixed bug where if the damaged entity were a player, the entityType would be null
-Fixed if statements in Condition.startScript()

October 10, 2021 pitbox46
-Refactored code
-Changed all JavaScript object properties to be camelCase rather than snake_case
-Will no longer run player events if the player is dead

October 9, 2021 pitbox46
-Added option to add visual only world border via condition's start function. Useful for area events
-Fixed bug where event wouldn't stop if the timer went off and the function didn't return winners
-Fixed a performance issue where sending a global message would create a new FakePlayer every invocation
-Moved globalData to Event rather than Condition. This allows globalData to be the same between all conditions of the same event
-Event start function now works
-Fix issue with globalData and its start objects

October 8, 2021 pitbox46
-Added entityName and entityID to both 'kill_entity' and 'damage_entity'
-Tick events now only check every second to avoid performance issues

October 7, 2021 pitbox46
-Timer event bug fixed

October 6, 2021 pitbox46
-Scoreboard now works
-Fixed issue with parameters for area_check

October 5, 2021 pitbox46
-Fixed bug with returning winners on a timed event

October 4, 2021 pitbox46
-Better error logging/error handling
-Timed events now work